--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,8 @@ pyparsing==2.1.10
 python-dateutil==2.6.0
 pytz==2016.10
 six==1.10.0
-SQLAlchemy>=1.3.0
 Werkzeug==0.11.15
+multiprocessing 
+requests
+bs4
+re
